force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/Agent_Customer_Care_Backlog_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Agent CC Backlog Analysis

https://app.asana.com/0/1203473392486179/1207090967822208/f</description>
    <label>Agent Customer Care Backlog Snapshot</label>
    <nameField>
        <displayFormat>CCBacklogSnap-{0000}</displayFormat>
        <label>Agent Customer Care Backlog Snapshot Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Customer Care Backlog Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>