force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>