force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>