force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Circle Account</fullName>
            </value>
            <value>
                <fullName>Circle Mint</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Cybavo Community</fullName>
            </value>
            <value>
                <fullName>Cybavo Email</fullName>
            </value>
            <value>
                <fullName>Data Subject Request</fullName>
            </value>
            <value>
                <fullName>Dev Console</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>EOL Product</fullName>
            </value>
            <value>
                <fullName>indirect-liquidity</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Project Buffalo</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>ZenDesk</fullName>
            </value>
            <value>
                <fullName>Alliance Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>