force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>CA Application</fullName>
            </value>
            <value>
                <fullName>Circle Mint</fullName>
            </value>
            <value>
                <fullName>Custom Limit Increase</fullName>
            </value>
            <value>
                <fullName>Cybavo</fullName>
            </value>
            <value>
                <fullName>Data Subject Request</fullName>
            </value>
            <value>
                <fullName>Developer Account</fullName>
            </value>
            <value>
                <fullName>EUROC</fullName>
            </value>
            <value>
                <fullName>Faster Settlement (CBIT/ Xpay/ RTP)</fullName>
            </value>
            <value>
                <fullName>General Inquiry/ Others</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Production API Inquiries</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>USDC</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Circle Account</fullName>
                <isActive>false</isActive>
                <label>Circle Account</label>
            </value>
            <value>
                <fullName>Circle Outreach</fullName>
                <isActive>false</isActive>
                <label>Circle Outreach</label>
            </value>
            <value>
                <fullName>Euro Related</fullName>
                <isActive>false</isActive>
                <label>Euro Related</label>
            </value>
            <value>
                <fullName>Fiat/Payouts</fullName>
                <isActive>false</isActive>
                <label>Fiat/Payouts</label>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
                <isActive>false</isActive>
                <label>General Inquiry</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Prod API Inquiries</fullName>
                <isActive>false</isActive>
                <label>Prod API Inquiries</label>
            </value>
            <value>
                <fullName>Rejected Applications</fullName>
                <isActive>false</isActive>
                <label>Rejected Applications</label>
            </value>
            <value>
                <fullName>Reporting &amp; Other Comms</fullName>
                <isActive>false</isActive>
                <label>Reporting &amp; Other Comms</label>
            </value>
            <value>
                <fullName>SEN/Signet</fullName>
                <isActive>false</isActive>
                <label>SEN/Signet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>