force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Escalation_Count__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Count__c</fullName>
    <label>Escalation Count</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>