force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Date__c</fullName>
    <label>First Response Date</label>
    <type>DateTime</type>
</CustomField>