force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <label>First Response Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>