force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/JIRA_Issue_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_Link__c</fullName>
    <label>JIRA Issue Link</label>
    <type>Url</type>
</CustomField>