force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/JIRA_Issue_Reporter__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_Reporter__c</fullName>
    <label>JIRA Issue Reporter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>