force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/JIRA_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_Status__c</fullName>
    <label>JIRA Issue Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>