force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Snapshot_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Created_Date_Time__c</fullName>
    <description>Snapshot Created Date/Tiime</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Created Date/Time</label>
    <type>DateTime</type>
</CustomField>