force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Soft_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Soft_Close_Date__c</fullName>
    <label>Soft Close Date</label>
    <type>DateTime</type>
</CustomField>