force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Initiated</fullName>
            </value>
            <value>
                <fullName>Kickoff Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Implementation In Progress</fullName>
            </value>
            <value>
                <fullName>API Key Issued / Dashboard Complete</fullName>
            </value>
            <value>
                <fullName>First Transaction</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete (Closed)</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Escalated Internally</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Hold/Standing Tickets</fullName>
            </value>
            <value>
                <fullName>Soft Close</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed - Spam</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Acknowledgment</fullName>
            </value>
            <value>
                <fullName>Approvals Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled (Closed)</fullName>
            </value>
            <value>
                <fullName>Closed - Discarded</fullName>
            </value>
            <value>
                <fullName>Closed - Launched</fullName>
            </value>
            <value>
                <fullName>Customer Saved (Closed)</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>On Roadmap</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Rejected (Closed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>