force-app/main/default/objects/Agent_Customer_Care_Backlog_Snapshot__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>